# renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  output.tga  rendererconfig.h.in
include/: Camera.hpp  DrawLine.hpp  FragmentShader.hpp  GRY_Vec.hpp  Light.hpp  Line.hpp  Material.hpp  Model.hpp  ModelObject.hpp  Object.hpp  OutImage.hpp  Rasterize.hpp  Render.hpp  Scene.hpp  Triangle.hpp  VertexShader.hpp  geometry.hpp  model.hpp  tgaimage.hpp
material/: head.mtl
src/: DrawLine.cpp  FragmentShader.cpp  Line.cpp  Model.cpp  OutImage.cpp  Render.cpp  Triangle.cpp  main.cpp  model.cpp  tgaimage.cpp
